# sxhkd-whichkey

./: .gitmodules  Cargo.toml  README.md  build.rs  gwatch.json  rustfmt.toml
c/: sxhkd-helper.c  sxhkd-helper.h
src/: lib.rs
src/keyboard/: keysyms.rs  mod.rs
src/parser/: command.rs  config.rs  hotkey_parser.rs  mod.rs  scanner.rs  subscribe.rs  token_parser.rs  types.rs
src/rhkc/: ipc.rs
src/rhkd/: executor.rs  fifo.rs  hotkey_handler.rs  mod.rs
src/sxhkd/: bindings.rs  command.rs  config.rs  mod.rs  parse.rs  subscribe.rs
src/sxhkd/parse/: hotkey_parser.rs  mod.rs  parser.rs  permutator.rs  scanner.rs
test/: test-sxhkdrc
tests/: test.rs
