[package]
default-run = "rhkd"
name = "rhkd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rhkd-whichkey"

[[bin]]
name = "rhkc"

[profile.release]
strip = true
lto = true

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.11", features = ["derive"] }
gtk = { version = "0.18.0", features = ["v3_24"] }
lazy_static = "1.4.0"
nix = { version = "0.26.2", features = ["poll"] }
once_cell = "1.18.0"
regex = "1.9.1"
signal-hook = "0.3.17"
thiserror = "1.0.44"
xcb = { version = "1.2.2" }
